Created a pop up window so the user can type in the test name after creating a test

--- a/MultipleChoiceUI/MultipleChoiceUI.csproj
+++ b/MultipleChoiceUI/MultipleChoiceUI.csproj
@@ -33,7 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>MultipleChoiceUI.App</StartupObject>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ControlzEx, Version=3.0.2.4, Culture=neutral, processorArchitecture=MSIL">
@@ -111,6 +112,9 @@
     <Compile Include="User Controls\QuestionUserControl.xaml.cs">
       <DependentUpon>QuestionUserControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SubmitTestWindow.xaml.cs">
+      <DependentUpon>SubmitTestWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Utility.cs" />
     <Page Include="CreateTestWindow.xaml">
       <SubType>Designer</SubType>
@@ -161,6 +165,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="User Controls\QuestionUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SubmitTestWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
