--- a/MultipleChoiceLibrary/MultipleChoiceLibrary.csproj
+++ b/MultipleChoiceLibrary/MultipleChoiceLibrary.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Mark.cs">
       <DependentUpon>MultipleChoiceModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\MarkModel.cs" />
     <Compile Include="MultipleChoiceModel.Context.cs">
       <DependentUpon>MultipleChoiceModel.Context.tt</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -158,6 +159,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\DataSources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
