--- a/MultipleChoiceUI/App.config
+++ b/MultipleChoiceUI/App.config
@@ -7,9 +7,14 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <connectionStrings>
-    <add name="MultipleChoiceEntities" connectionString="metadata=res://*/MultipleChoiceModel.csdl|res://*/MultipleChoiceModel.ssdl|res://*/MultipleChoiceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\MCTS.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="MultipleChoiceUI.Properties.Settings.MultipleChoiceConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MCTS.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="MultipleChoiceUI.Properties.Settings.MCTSConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MCTS.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MultipleChoiceEntities" connectionString="metadata=res://*/MultipleChoiceModel.csdl|res://*/MultipleChoiceModel.ssdl|res://*/MultipleChoiceModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\MCTS.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="MultipleChoiceUI.Properties.Settings.MultipleChoiceConnectionString"
+      connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MCTS.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="MultipleChoiceUI.Properties.Settings.MCTSConnectionString"
+      connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\MCTS.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
